fix: navbar css 수정, scrollbar 설정

--- a/components/navBar/NavBar.module.css
+++ b/components/navBar/NavBar.module.css
@@ -5,11 +5,12 @@
   align-items: center;
   padding: 61px 36px;
   width: 100%;
-  max-width: 1680px;
+  /* max-width: 1680px; */
   height: 40px;
   /* position: absolute; */
   left: 0;
   top: 61px;
+  border-bottom: solid 3px #E7EAEE;
 }
 
 .navTitle {
@@ -46,6 +47,7 @@
   align-items: center;
   gap: 16px;
   flex: none;
+  font-size: 1.4rem;
 }
 .activeItem{
   color: #8247E5;
@@ -54,6 +56,7 @@
   align-items: center;
   gap: 16px;
   flex: none;
+  font-size: 1.4rem;
 }
 
 .navButton {
